<resources>
    <string name="app_name">CalcShubenok</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="umnozh">*</string>
    <string name="delenie">/</string>
    <string name="ravno">=</string>
    <string name="ochist">C</string>
    <string name="three">3</string>
    <string name="four">4</string>
    <string name="five">5</string>
    <string name="six">6</string>
    <string name="seven">7</string>
    <string name="eight">8</string>
    <string name="nine">9</string>
    <string name="zero">0</string>
    <string name="onedelenie">1/x</string>
    <string name="percent">%</string>
    <string name="powtwo">x^2</string>
    <string name="sqrttwo">sqrt2</string>
</resources>