<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">
    <LinearLayout
        android:gravity="center_horizontal"
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:orientation="vertical">
        <LinearLayout
            android:layout_height="90dp"
            android:layout_width="300dp"
            android:orientation="horizontal">
        <EditText
            android:id="@+id/textChislo"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:gravity="center">
        </EditText>
        <Button
            android:id="@+id/delDigitBtn"
            android:layout_marginTop="15dp"
            android:layout_width="65dp"
            android:layout_height="40dp"
            android:text="-">
        </Button>
    </LinearLayout>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:gravity="center_horizontal"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:orientation="horizontal">
       <Button
            android:id="@+id/plusBtn"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:text="@string/plus">
        </Button>
        <Button
            android:id="@+id/minusBtn"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:text="@string/minus">
        </Button>
        <Button
            android:id="@+id/umnozhBtn"
            android:layout_width="80dp"
            android:layout_height="60dp"
            android:text="@string/umnozh">
        </Button>
            <Button
                android:id="@+id/delBtn"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:text="@string/delenie">
            </Button>

    </LinearLayout>
        <LinearLayout
            android:gravity="center"
            android:layout_height="70dp"
            android:layout_width="350dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/ravnoBtn"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:text="@string/ravno">
            </Button>
            <Button
                android:id="@+id/ochistBtn"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:text="@string/ochist">
            </Button>
            <Button
                android:id="@+id/onedelenieBtn"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:text="@string/onedelenie">
            </Button>
            <Button
                android:id="@+id/percentBtn"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:text="@string/percent">
            </Button>
        </LinearLayout>

        <LinearLayout
            android:gravity="center"
            android:layout_height="70dp"
            android:layout_width="200dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/powtwo"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:text="@string/powtwo">
            </Button>
            <Button
                android:id="@+id/sqrttwo"
                android:layout_width="80dp"
                android:layout_height="60dp"
                android:text="@string/sqrttwo">
            </Button>
        </LinearLayout>

        <LinearLayout
            android:layout_gravity="center"
            android:gravity="center_horizontal"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:orientation="vertical">


        </LinearLayout>

        </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>